Update strings + correct usage in resource attributes. Add comments

--- a/app/src/main/res/layout/item_selected_filter.xml
+++ b/app/src/main/res/layout/item_selected_filter.xml
@@ -8,6 +8,7 @@
 
   <ImageView
       android:id="@+id/removeFilterButton"
+      android:contentDescription="@string/remove_filter_button"
       android:layout_width="30dp"
       android:layout_height="30dp"
       android:background="@drawable/circle_buttons"
@@ -20,7 +21,7 @@
       android:paddingStart="10dp"
       android:paddingEnd="10dp"
       android:gravity="center"
-      android:text="Filter Name"
+      android:text="@string/default_filter_name"
       android:textSize="12sp"
       android:textStyle="bold" />
 
