--- a/app/src/main/res/layout/item_precaution.xml
+++ b/app/src/main/res/layout/item_precaution.xml
@@ -38,6 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_indicator_backward"
+        android:contentDescription="@string/slide_backward_hint"
         android:visibility="gone"
         app:layout_constraintTop_toTopOf="@id/horizontalRecycleView"
         app:layout_constraintBottom_toBottomOf="@id/horizontalRecycleView"
@@ -47,6 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_indicator_forward"
+        android:contentDescription="@string/slide_forward_hint"
         android:visibility="gone"
         app:layout_constraintTop_toTopOf="@id/horizontalRecycleView"
         app:layout_constraintBottom_toBottomOf="@id/horizontalRecycleView"
