--- a/app/src/main/res/menu/report_list_actions.xml
+++ b/app/src/main/res/menu/report_list_actions.xml
@@ -6,10 +6,9 @@
       android:title="@string/search_label"
       android:icon="@drawable/ic_search"
       app:showAsAction="collapseActionView|ifRoom"
-      app:actionViewClass="androidx.appcompat.widget.SearchView" />
-  <!-- Androidx version is better - less buggy -->
-  <item
-      android:id="@+id/settings_action"
+      app:actionViewClass="android.widget.EditText" />
+
+  <item android:id="@+id/settings_action"
       android:title="@string/action_settings"
       android:icon="@drawable/ic_settings"
       app:showAsAction="ifRoom" />
