--- a/app/src/main/res/drawable/circle_plus_shortcut_button.xml
+++ b/app/src/main/res/drawable/circle_plus_shortcut_button.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-<!--  <item android:drawable="@drawable/circle_buttons" />-->
   <item>
     <shape android:shape="rectangle">
       <corners android:radius="20dp" />
       <solid android:color="@color/colorPrimary" /> <!-- Main Color -->
-      <stroke android:width="2dp" android:color="@android:color/black" /> <!-- Outline -->
+      <stroke android:width="2dp" android:color="@color/darkMode" /> <!-- Outline -->
     </shape>
   </item>
   <item android:drawable="@drawable/ic_circle_plus" />
