--- a/app/src/main/res/layout/activity_create_report.xml
+++ b/app/src/main/res/layout/activity_create_report.xml
@@ -67,7 +67,7 @@
                 android:id="@+id/dateTV"
                 android:text="@string/create_report_date"
                 android:textSize="20sp"
-                android:textColor="@android:color/black"
+                android:textColor="@color/darkMode"
                 android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@+id/headerTV"
                 app:layout_constraintBottom_toTopOf="@+id/dateEditText"
@@ -80,8 +80,8 @@
                 android:inputType="datetime"
                 android:hint="@string/date_edittext_hint"
                 android:importantForAutofill="no"
-                android:textColorHint="#AB000000"
-                android:backgroundTint="@color/colorLight"
+                android:textColorHint="@color/textHintColor"
+                android:backgroundTint="@color/colorPrimaryDark"
                 android:layout_marginStart="5dp"
                 app:layout_constraintTop_toBottomOf="@+id/dateTV"
                 app:layout_constraintStart_toStartOf="@+id/startGuideline"/>
@@ -92,7 +92,7 @@
                 android:id="@+id/employeeTV"
                 android:text="@string/create_report_my_team"
                 android:textSize="20sp"
-                android:textColor="@android:color/black"
+                android:textColor="@color/darkMode"
                 android:textStyle="bold"
                 android:layout_marginTop="30dp"
                 app:layout_constraintTop_toBottomOf="@+id/dateEditText"
@@ -119,7 +119,7 @@
                 android:id="@+id/healthPracticeTV"
                 android:text="@string/create_report_health_practice"
                 android:textSize="20sp"
-                android:textColor="@android:color/black"
+                android:textColor="@color/darkMode"
                 android:textStyle="bold"
                 android:layout_marginTop="30dp"
                 app:layout_constraintTop_toBottomOf="@+id/employeeSpinner"
@@ -148,7 +148,7 @@
                 android:id="@+id/facilityTV"
                 android:text="@string/create_report_facility_location"
                 android:textSize="20sp"
-                android:textColor="@android:color/black"
+                android:textColor="@color/darkMode"
                 android:textStyle="bold"
                 android:layout_marginTop="30dp"
                 app:layout_constraintTop_toBottomOf="@+id/healthPracticeSpinner"
@@ -176,7 +176,7 @@
                 android:layout_height="30dp"
                 android:id="@+id/see_assignment_button"
                 android:text="@string/create_report_assignments_button"
-                android:textColor="#0000EE"
+                android:textColor="@color/hypertextColor"
                 android:background="?attr/selectableItemBackground"
                 android:textSize="12sp"
                 android:layout_marginStart="10dp"
