--- a/app/src/main/res/layout/item_health_practice.xml
+++ b/app/src/main/res/layout/item_health_practice.xml
@@ -5,7 +5,6 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/practiceItemView"
-    android:layout_marginStart="60dp"
     android:paddingTop="10dp"
     android:paddingStart="10dp"
     android:paddingEnd="10dp"
@@ -28,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:textColor="@android:color/black"
+        android:textColor="@color/darkMode"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/precautionImageView"
