--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,10 @@
     <color name="colorAccent">#EC4444</color>
 
     <color name="appBackground">#CCCCCC</color> <!-- USC Light Grey -->
+    <color name="textHintColor">#AB000000</color>
+    <color name="hypertextColor">#0000EE</color>
+    <color name="darkMode">#000000</color>
+    <color name="lightMode">#FFFFFF</color>
 
     <color name="actionModeColor">#EC4444</color>
 </resources>
