--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,8 +29,8 @@
     </style>
 
     <style name="CustomToolBarStyle" parent="ThemeOverlay.AppCompat.ActionBar">
-        <item name="android:textColorPrimary">@android:color/white</item>
-        <item name="android:textColorSecondary">@android:color/white</item>
+        <item name="android:textColorPrimary">@color/lightMode</item>
+        <item name="android:textColorSecondary">@color/lightMode</item>
         <item name="homeAsUpIndicator">@drawable/ic_back_arrow</item>
         <item name="actionMenuTextColor">@color/colorLight</item>
 <!--        <item name="searchViewStyle">@style/MySearchViewStyle</item>-->
@@ -46,8 +46,8 @@
     </style>
     
     <style name="ToolbarPopupStyle" parent="ThemeOverlay.AppCompat">
-        <item name="android:textColorPrimary">@android:color/white</item>
-        <item name="android:textColorSecondary">@android:color/white</item>
+        <item name="android:textColorPrimary">@color/lightMode</item>
+        <item name="android:textColorSecondary">@color/lightMode</item>
     </style>
 
     <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
@@ -68,7 +68,7 @@
     </style>
 
     <style name="DropDownTheme" parent="android:TextAppearance.Widget.TextView.SpinnerItem">
-        <item name="android:divider">#000000</item>
+        <item name="android:divider">@color/darkMode</item>
         <item name="android:dividerHeight">1dp</item>
         <item name="android:background">@color/colorLight</item>
     </style>
