--- a/app/src/main/res/layout/item_precaution.xml
+++ b/app/src/main/res/layout/item_precaution.xml
@@ -37,21 +37,24 @@
         android:id="@+id/backwardIndicatorArrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_indicator_backward"
         android:contentDescription="@string/slide_backward_hint"
+        android:src="@drawable/ic_indicator_backward"
         android:visibility="gone"
+        app:layout_constraintStart_toStartOf="@id/horizontalRecycleView"
         app:layout_constraintTop_toTopOf="@id/horizontalRecycleView"
         app:layout_constraintBottom_toBottomOf="@id/horizontalRecycleView"
-        app:layout_constraintStart_toStartOf="@id/horizontalRecycleView" />
+        app:layout_constraintVertical_bias="0.25" />
     <ImageView
         android:id="@+id/forwardIndicatorArrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_indicator_forward"
+        android:rotationY="180"
+        android:src="@drawable/ic_indicator_backward"
         android:contentDescription="@string/slide_forward_hint"
         android:visibility="gone"
         app:layout_constraintTop_toTopOf="@id/horizontalRecycleView"
         app:layout_constraintBottom_toBottomOf="@id/horizontalRecycleView"
-        app:layout_constraintEnd_toEndOf="@id/horizontalRecycleView"/>
+        app:layout_constraintEnd_toEndOf="@id/horizontalRecycleView"
+        app:layout_constraintVertical_bias="0.25"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
