--- a/app/src/main/res/layout/item_filter_checkbox.xml
+++ b/app/src/main/res/layout/item_filter_checkbox.xml
@@ -6,7 +6,7 @@
     android:layout_height="50dp">
 
 <!-- Used in place of imageview plus textview -->
-  <CheckedTextView
+  <androidx.appcompat.widget.AppCompatCheckedTextView
       android:id="@+id/filterCheckNameTextView"
       android:layout_width="0dp"
       android:layout_height="0dp"
@@ -16,11 +16,12 @@
       android:paddingBottom="10dp"
       android:text="Filter Name"
       android:textSize="20sp"
-      android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+      android:checkMark="@drawable/custom_checkbox"
       android:gravity="center_vertical"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"/>
+  <!-- Checkmark seems to REQUIRE vectors in the selector for some reason. layer-lists, shapes etc don't seem allowed -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
