--- a/app/src/main/res/layout/custom_alert_dialog.xml
+++ b/app/src/main/res/layout/custom_alert_dialog.xml
@@ -1,67 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/appBackground">
 
-  <ImageView
-      android:id="@+id/alertIcon"
+  <androidx.constraintlayout.widget.ConstraintLayout
+      android:id="@+id/imageViewBackground"
       android:layout_width="0dp"
-      android:layout_height="50dp"
+      android:layout_height="0dp"
+      android:paddingHorizontal="12dp"
       android:background="@color/colorPrimary"
-      android:src="@drawable/usc_shield_mono_gold"
-      app:layout_constraintBottom_toTopOf="@+id/alertMessage"
-      app:layout_constraintEnd_toStartOf="@+id/titleTextView"
-      app:layout_constraintHorizontal_weight="2"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintBottom_toBottomOf="@+id/alertTitle"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+      app:layout_constraintEnd_toStartOf="@+id/alertTitle"
+      app:layout_constraintHorizontal_weight="3">
+
+    <ImageView
+        android:id="@+id/alertIcon"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:src="@drawable/usc_shield_mono_gold"
+        android:contentDescription="@string/company_logo"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+  </androidx.constraintlayout.widget.ConstraintLayout>
+
 
   <TextView
-      android:id="@+id/titleTextView"
+      android:id="@+id/alertTitle"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:textSize="20sp"
+      android:paddingBottom="8dp"
+      android:text="Connection Issue!"
+      android:textColor="@color/darkMode"
+      android:textSize="26sp"
       android:textStyle="bold"
-      android:paddingStart="8dp"
-      android:paddingEnd="8dp"
+      android:textAlignment="center"
+      android:gravity="center"
+      android:maxLines="2"
+      android:ellipsize="end"
+      app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toTopOf="@+id/alertMessage"
+      app:layout_constraintStart_toEndOf="@id/imageViewBackground"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_weight="5"
-      app:layout_constraintStart_toEndOf="@+id/alertIcon"
-      app:layout_constraintTop_toTopOf="parent" />
+      app:layout_constraintVertical_bias="0.3"/>
 
   <TextView
       android:id="@+id/alertMessage"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_marginBottom="16dp"
-      android:padding="8dp"
-      android:textSize="16sp"
+      android:layout_marginTop="10dp"
+      android:paddingHorizontal="8dp"
+      android:text="Alert Dialog Message"
+      android:textSize="21sp"
+      android:textStyle="italic|bold"
+      android:textAlignment="center"
+      android:gravity="center"
+      android:textColor="@color/textHintColor"
+      app:layout_constraintTop_toBottomOf="@id/imageViewBackground"
       app:layout_constraintBottom_toTopOf="@+id/alertOkButton"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/alertIcon" />
+      app:layout_constraintStart_toStartOf="parent" />
 
   <Button
       android:id="@+id/alertCancelButton"
-      android:layout_width="0dp"
+      android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@color/colorLight"
+      android:paddingHorizontal="30dp"
       android:text="@string/alert_dialog_cancel"
-      app:layout_constraintEnd_toStartOf="@+id/alertOkButton"
+      android:textSize="20sp"
+      android:textColor="@color/colorPrimaryDark"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="@+id/alertOkButton" />
-
+      app:layout_constraintEnd_toStartOf="@+id/alertOkButton"
+      app:layout_constraintTop_toTopOf="@+id/alertOkButton"
+      app:layout_constrainedWidth="true"
+      app:layout_constraintWidth_min="130dp" />
 
   <Button
       android:id="@+id/alertOkButton"
-      android:layout_width="0dp"
+      android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@color/colorLight"
+      android:layout_marginTop="20dp"
+      android:layout_marginBottom="14dp"
+      android:paddingHorizontal="40dp"
       android:text="@string/alert_dialog_ok"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
+      android:textSize="20sp"
+      android:textColor="@color/colorPrimaryDark"
       app:layout_constraintStart_toEndOf="@id/alertCancelButton"
-      app:layout_constraintTop_toBottomOf="@+id/alertMessage" />
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/alertMessage"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constrainedWidth="true"
+      app:layout_constraintWidth_min="130dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
