--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,20 +5,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".ActivitySettings">
 
-    <include android:id="@+id/toolbar_layout"
-        layout="@layout/app_toolbar"
+    <include layout="@layout/app_toolbar"
+        android:id="@+id/toolbar_layout"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/settings_fragment" />
-
+        app:layout_constraintBottom_toTopOf="@+id/settings_fragment" />
 
     <FrameLayout
         android:id="@+id/settings_fragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/toolbar_layout"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+    <!-- 0dp == match_constraints since match_parent is actually
+    NOT recommended/allowed for children of a constraintLayout
+    Match_Constraints stretches as far as possible by default
+    BUT can use layout_constraintWidth_default = "wrap" to let the view shrink as needed -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
