--- a/app/src/debug/res/drawable/app_icon.xml
+++ b/app/src/debug/res/drawable/app_icon.xml
@@ -2,9 +2,9 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
   <item>
     <shape android:shape="rectangle">
-      <corners android:radius="100dp" />
-      <solid android:color="@color/textHintColor" /> <!-- Easy to spot debug Color -->
-      <stroke android:width="2dp" android:color="@color/lightMode" /> <!-- Outline -->
+      <corners android:radius="40dp" />
+      <solid android:color="@color/darkMode" /> <!-- Easy to spot debug Color -->
+      <stroke android:width="3dp" android:color="@color/lightMode" /> <!-- Outline -->
     </shape>
   </item>
   <item android:drawable="@drawable/usc_seal_gold" />
