--- a/app/src/main/res/layout/item_precaution.xml
+++ b/app/src/main/res/layout/item_precaution.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/horizontalRecycleView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -27,11 +27,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@+id/precautionTypeTView"
+        app:layout_constraintTop_toBottomOf="@id/precautionTypeTView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageView
         android:id="@+id/backwardIndicatorArrow"
@@ -55,6 +54,6 @@
         app:layout_constraintTop_toTopOf="@id/horizontalRecycleView"
         app:layout_constraintBottom_toBottomOf="@id/horizontalRecycleView"
         app:layout_constraintEnd_toEndOf="@id/horizontalRecycleView"
-        app:layout_constraintVertical_bias="0.25"/>
+        app:layout_constraintVertical_bias="0.25" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
