--- a/app/src/main/res/layout/activity_create_report.xml
+++ b/app/src/main/res/layout/activity_create_report.xml
@@ -42,6 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/headerTV"
+                android:transitionName="reportType"
                 android:text="@string/create_report"
                 android:textSize="22sp"
                 android:textColor="@color/colorPrimary"
