--- a/app/src/main/res/layout/item_health_practice.xml
+++ b/app/src/main/res/layout/item_health_practice.xml
@@ -23,6 +23,7 @@
 
     <TextView
         android:id="@+id/precautionButtonTV"
+        android:transitionName="reportType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
