Cleanup resource directory accessibility properties, placeholder text, and comments

--- a/app/src/main/res/layout/custom_alert_dialog.xml
+++ b/app/src/main/res/layout/custom_alert_dialog.xml
@@ -37,7 +37,7 @@
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:paddingBottom="8dp"
-      android:text="Connection Issue!"
+      android:text="@string/default_alert_dialog_title"
       android:textColor="@color/darkMode"
       android:textSize="26sp"
       android:textStyle="bold"
@@ -58,7 +58,7 @@
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:paddingHorizontal="8dp"
-      android:text="Alert Dialog Message"
+      android:text="@string/default_alert_dialog_message"
       android:textSize="21sp"
       android:textStyle="italic|bold"
       android:textAlignment="center"
