--- a/app/src/main/res/layout/item_expandable_filter.xml
+++ b/app/src/main/res/layout/item_expandable_filter.xml
@@ -10,7 +10,7 @@
       android:id="@+id/filterGroupNameTextView"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:text="Filter Name!"
+      android:text="@string/default_filter_name"
       android:textSize="22sp"
       android:textStyle="bold"
       android:padding="10dp"
