--- a/app/src/main/res/layout/item_report.xml
+++ b/app/src/main/res/layout/item_report.xml
@@ -26,7 +26,7 @@
       android:layout_marginTop="5dp"
       android:layout_marginBottom="8dp"
       android:gravity="center"
-      android:text="Contact Enteric Violation"
+      android:text="@string/default_report_item_title"
       android:textColor="@color/colorPrimary"
       android:textSize="20sp"
       android:textStyle="bold"
@@ -42,7 +42,7 @@
       android:layout_height="wrap_content"
       android:gravity="center"
       android:lineSpacingExtra="8dp"
-      android:text="10:24pm 10/12/2019"
+      android:text="@string/default_report_item_date"
       android:textSize="12sp"
       android:textColor="@color/colorPrimary"
       app:layout_constraintBottom_toBottomOf="@+id/reportTypeTitleTV"
@@ -57,7 +57,7 @@
       android:layout_height="wrap_content"
       android:paddingStart="20dp"
       android:paddingEnd="20dp"
-      android:text="Committed by Nicholas Lionel Caceres"
+      android:text="@string/default_report_item_employee_name"
       android:textColor="@color/colorPrimary"
       app:layout_constraintBottom_toTopOf="@+id/reportLocationTV"
       app:layout_constraintEnd_toEndOf="parent"
@@ -71,7 +71,7 @@
       android:layout_marginTop="8dp"
       android:paddingStart="20dp"
       android:paddingEnd="20dp"
-      android:text="Location: HSC Unit 3 Room 323"
+      android:text="@string/default_report_item_location"
       android:textColor="@color/colorPrimary"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@id/reportTypeImageView"
