--- a/app/src/main/res/layout/custom_spinner_dropdown.xml
+++ b/app/src/main/res/layout/custom_spinner_dropdown.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:paddingStart="10dp"
-    android:text="This is an example"
+    android:text="@string/default_spinner_message"
     android:textColor="@color/colorPrimary"
     android:textSize="18sp"
     android:background="@drawable/custom_dropdown_shape"
