--- a/app/src/main/res/layout/preference_main.xml
+++ b/app/src/main/res/layout/preference_main.xml
@@ -9,6 +9,7 @@
         android:id="@android:id/title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:text="@string/default_preferences_title"
         android:textSize="16sp"
         android:textStyle="bold"
         android:layout_marginStart="22dp"
@@ -24,6 +25,7 @@
         android:id="@android:id/summary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:text="@string/default_preferences_summary"
         android:textSize="18sp"
         android:gravity="end"
         android:layout_marginEnd="24dp"
