--- a/app/src/main/res/layout/preferences_category.xml
+++ b/app/src/main/res/layout/preferences_category.xml
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@android:id/title"
+        android:text="@string/default_preferences_title"
         android:textStyle="bold"
         android:textAllCaps="true"
         android:textSize="20sp"
