Split ReportListActivity into viewModel+repository+dataSource with updated Report date implementation

--- a/app/src/main/res/layout/activity_report_list.xml
+++ b/app/src/main/res/layout/activity_report_list.xml
@@ -4,7 +4,7 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_height="match_parent"
   android:layout_width="match_parent"
-  android:id="@+id/myCoordinatorLayout">
+  android:id="@+id/mainCoordinatorLayout">
 
   <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
@@ -44,9 +44,12 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/reports_sorry_message"
-          android:textSize="18sp"
-          android:alpha="0.6"
-          android:visibility="gone"
+          android:textSize="22sp"
+          android:textStyle="bold"
+          android:textAlignment="center"
+          android:gravity="center"
+          android:alpha="0.8"
+          android:visibility="invisible"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toTopOf="parent"
