--- a/app/src/main/res/layout/fragment_sort_filter.xml
+++ b/app/src/main/res/layout/fragment_sort_filter.xml
@@ -5,10 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-  <include layout="@layout/app_toolbar"
-      android:id="@+id/toolbar_layout"
-      app:layout_constraintTop_toTopOf="parent"/>
-
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/selectedFiltersRecyclerView"
       android:layout_width="match_parent"
@@ -16,7 +12,7 @@
       android:layout_marginTop="5dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/toolbar_layout"
+      app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toTopOf="@+id/expandableFilterRecyclerView"/>
 
   <androidx.recyclerview.widget.RecyclerView
