Split CreateActivity into View+ViewModel. Drop Volley for Retrofit via Employee, Health Practice, & Location Repositories + RemoteDataSources

--- a/app/src/main/res/layout/activity_create_report.xml
+++ b/app/src/main/res/layout/activity_create_report.xml
@@ -43,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/headerTV"
                 android:transitionName="reportType"
-                android:text="@string/create_report"
+                android:text="@string/default_create_report_header"
                 android:textSize="22sp"
                 android:textColor="@color/colorPrimary"
                 android:textStyle="bold"
