--- a/app/src/debug/res/xml/shortcuts.xml
+++ b/app/src/debug/res/xml/shortcuts.xml
@@ -1,4 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
-
+  <shortcut
+    android:enabled="true"
+    android:icon="@drawable/circle_plus_shortcut_button"
+    android:shortcutId="create_new_report_shortcut"
+    android:shortcutShortLabel="@string/create_new_report_shortcut_short_label"
+    android:shortcutLongLabel="@string/create_new_report_shortcut_short_label">
+    <!-- shortcutId & shortcutShortLabel required! Could include disabled msg too! -->
+    <!--suppress AndroidDomInspection --> <!-- Ignore targetPackage claiming "debug" suffix can't be found -->
+    <intent
+      android:action="android.intent.action.VIEW"
+      android:targetPackage="edu.usc.nlcaceres.infectionprevention.debug"
+      android:targetClass="edu.usc.nlcaceres.infectionprevention.ActivityMain" />
+    <!-- If your shortcut is associated with multiple intents, include all here
+         The last intent in list is what user sees on launch -->
+    <!-- Could include "categories" as well BUT unable to find any besides "conversation" -->
+    <capability-binding android:key="actions.intent.CREATE_THING" />
+    <!-- This capability says new entity is being created, so more fitting than create_document (i.e. note or word doc) -->
+  </shortcut>
 </shortcuts>
