--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,16 +22,18 @@
             <include layout="@layout/app_toolbar"
                 android:id="@+id/toolbar_layout"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/fragment_main_container" />
+                app:layout_constraintBottom_toTopOf="@+id/fragment_nav_host" />
 
             <androidx.fragment.app.FragmentContainerView
                 tools:layout="@layout/fragment_main"
-                android:name="edu.usc.nlcaceres.infectionprevention.FragmentMain"
-                android:id="@+id/fragment_main_container"
+                android:name="androidx.navigation.fragment.NavHostFragment"
+                android:id="@+id/fragment_nav_host"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 app:layout_constraintTop_toBottomOf="@id/toolbar_layout"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:defaultNavHost="true"
+                app:navGraph="@navigation/nav_graph" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
