--- a/app/src/main/res/menu/action_buttons.xml
+++ b/app/src/main/res/menu/action_buttons.xml
@@ -3,10 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <!-- Settings button -->
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/globalActionToFragmentSettings"
         android:icon="@drawable/ic_settings"
         android:title="@string/action_settings"
         app:showAsAction="ifRoom" />
-
 
 </menu>
