--- a/app/src/main/res/menu/report_list_actions.xml
+++ b/app/src/main/res/menu/report_list_actions.xml
@@ -8,9 +8,10 @@
       app:showAsAction="collapseActionView|ifRoom"
       app:actionViewClass="android.widget.EditText" />
 
-  <item android:id="@+id/settings_action"
+  <item android:id="@+id/globalActionToFragmentSettings"
       android:title="@string/action_settings"
       android:icon="@drawable/ic_settings"
+      android:menuCategory="secondary"
       app:showAsAction="ifRoom" />
 
 </menu>
