Improve readability via better text size & color contrast

--- a/app/src/main/res/layout/preference_main.xml
+++ b/app/src/main/res/layout/preference_main.xml
@@ -10,7 +10,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/default_preferences_title"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         android:layout_marginStart="22dp"
         android:layout_marginTop="16dp"
@@ -26,7 +26,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/default_preferences_summary"
-        android:textSize="18sp"
+        android:textSize="16sp"
+        android:textColor="#4E5355"
         android:gravity="end"
         android:layout_marginEnd="24dp"
         app:layout_constraintTop_toTopOf="parent"
