--- a/app/src/main/res/layout/item_selected_filter.xml
+++ b/app/src/main/res/layout/item_selected_filter.xml
@@ -23,6 +23,7 @@
       android:gravity="center"
       android:text="@string/default_filter_name"
       android:textSize="12sp"
-      android:textStyle="bold" />
+      android:textStyle="bold"
+      android:textColor="@color/darkMode"/>
 
 </LinearLayout>
