Add string res as default title + description for header img. Favor labelFor over hint for editText a11y

--- a/app/src/main/res/layout/preferences_edittext_dialog.xml
+++ b/app/src/main/res/layout/preferences_edittext_dialog.xml
@@ -22,7 +22,7 @@
         android:layout_height="50dp"
         android:id="@+id/alertIcon"
         android:src="@drawable/usc_shield_mono_gold"
-        android:contentDescription="USC Shield"
+        android:contentDescription="@string/settings_editText_dialog_header_image_desc"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,7 @@
       android:textSize="24sp"
       android:textColor="@color/colorPrimaryDark"
       android:textStyle="bold"
-      android:text="Report Title Color"
+      android:text="@string/settings_editText_dialog_preference_name_title"
       android:labelFor="@android:id/edit"
       android:layout_marginStart="18dp"
       android:layout_marginTop="10dp"
